--- a/spring-boot-app/pom.xml
+++ b/spring-boot-app/pom.xml
@@ -57,6 +57,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.0.2</version>
+            </plugin>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
